--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "author": "Jhonier Serna Jhonier011@gmail.com",
   "license": "ISC",
   "dependencies": {
-    "yargs": "^13.2.2"
+    "body-parser": "^1.18.3",
+    "bootstrap": "^4.3.1",
+    "express": "^4.16.4",
+    "hbs": "^4.0.3",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.7"
   }
 }
