--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Semana 2",
   "main": "index.js",
   "scripts": {
+    "start":"node src/express.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jhonier Serna Jhonier011@gmail.com",
