--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "description": "Semana 2",
   "main": "index.js",
   "scripts": {
-    "start":"node src/express.js",
+    "start": "node src/express.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jhonier Serna Jhonier011@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "hbs": "^4.0.3",
     "jquery": "^3.3.1",
+    "mongoose": "^5.5.1",
     "popper.js": "^1.14.7"
   }
 }
