--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hbs": "^4.0.3",
     "jquery": "^3.3.1",
     "mongoose": "^5.5.1",
+    "mongoose-unique-validator": "^2.0.2",
     "popper.js": "^1.14.7"
   }
 }
