--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "repositorio",
   "version": "1.0.0",
   "description": "Semana 2",
-  "main": "index.js",
+  "main": "Login.hbs",
   "scripts": {
     "start": "node src/express.js",
     "test": "echo \"Error: no test specified\" && exit 1"
