--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.16.1",
     "hbs": "^4.0.3",
     "jquery": "^3.3.1",
+    "memorystore": "^1.6.1",
     "mongoose": "^5.5.1",
     "mongoose-unique-validator": "^2.0.2",
     "popper.js": "^1.14.7"
